--- a/html/page4.html
+++ b/html/page4.html
@@ -12,8 +12,8 @@
 	<header>
 		<ul>
 			<li>
-				<a href="#" onclick="saveCurrentPlayTime(); window.location.href='../点这里打开网页.html';">
-					剪纸简介
+				<a href="#" onclick="saveCurrentPlayTime(); window.location.href='../index.html';">
+					项目简介
 				</a>
 			</li>
 			<!-- <li>
@@ -22,7 +22,7 @@
 			</li> -->
 			<li>
 				<a href="#" onclick="saveCurrentPlayTime(); window.location.href='page3.html';">
-					实地调研</a>
+					交互体验</a>
 			</li>
 			<li>
 				<a href="#" onclick="saveCurrentPlayTime(); window.location.href='page4.html';">
@@ -49,12 +49,12 @@
 					作品评价</a>
 			</li> -->
 			<li>
-				<a href="#" onclick="saveCurrentPlayTime(); window.location.href='page10.html';">
-					用户感触</a>
-			</li>
-			<li>
 				<a href="#" onclick="saveCurrentPlayTime(); window.location.href='page11.html';">
 					剪纸文创</a>
+			</li>
+			<li>
+				<a href="#" onclick="saveCurrentPlayTime(); window.location.href='page10.html';">
+					用户交流</a>
 			</li>
 		</ul>
 	</header>
