Add large video files using Git LFS

--- a/html/page12.html
+++ b/html/page12.html
@@ -18,21 +18,37 @@
 		</h3>
 		<ul class="bizhi">
 
-			<li><img src="../images/b4.png" width="250" height="420"></li>
-			<li><img src="../images/b5.png" width="250" height="420"></li>
-			<li><img src="../images/b6.png" width="250" height="420"></li>
-			<li><img src="../images/b7.png" width="250" height="420"></li>
-			<li><img src="../images/b8.png" width="250" height="420"></li>
-			<li><img src="../images/b9.png" width="250" height="420"></li>
+			<li><img src="../images/b4.png" width="250" height="320"></li>
+			<li><img src="../images/b5.png" width="250" height="320"></li>
+			<li><img src="../images/b6.png" width="250" height="320"></li>
+			<li><img src="../images/b7.png" width="250" height="320"></li>
+			<li><img src="../images/b8.png" width="250" height="320"></li>
+			<li><img src="../images/b9.png" width="250" height="320"></li>
+			<li><img src="../images/3.png"  width="250" height="320"></li>
+			<li><img src="../images/4.png"  width="250" height="320"></li>
+			<!-- <li><img src="../images/5.png"  width="250" height="320"></li> -->
+			<li><img src="../images/bb6.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb7.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb8.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb9.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb10.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb11.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb12.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb13.PNG" width="250" height="320"></li>
+			<!-- <li><img src="../images/bb14.PNG" width="250" height="320"></li> -->
+			<li><img src="../images/bb15.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb16.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb17.PNG" width="250" height="320"></li>
+			<li><img src="../images/bb18.PNG" width="250" height="320"></li>
+			<!-- <li><img src="../images/b19.PNG" width="250" height="320"></li>
+			<li><img src="../images/b9.PNG" width="250" height="320"></li> -->
 		<!-- </ul>
 		<h2>沙画鉴赏</h2>
 		<ul class="bizhi"> -->
-			<li><img src="../images/3.png"  width="250" height="420"></li>
-			<li><img src="../images/4.png"  width="250" height="420"></li>
-			<li><img src="../images/5.png"  width="250" height="420"></li>
 
 
-		</ul>
+
+		<!-- </ul>
 		<h2>视频鉴赏</h2>
 		<header>
 			<ul>
@@ -44,7 +60,7 @@
 			</ul>
 		</header>
 		<p class="" align="center"><video src="../video/1.mp4" controls="controls" width="900" height="600"></video>
-		</p>
+		</p> -->
 
 		<audio id="audioElementId" src="../video/dayv.ogg" autoplay="autoplay" loop="loop" hidden="true"
 			style="display: none;">
