--- a/html/page19.html
+++ b/html/page19.html
@@ -13,14 +13,14 @@
 		<h2>视频鉴赏</h2>
 		<header>
 			<ul>
-				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page17.html';">经典片段一</a></li>
-				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page18.html';">经典片段二</a></li>
-				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page19.html';">经典片段三</a></li>
-				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page20.html';">经典片段四</a></li>
+				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page17.html';">交互动效</a></li>
+				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page18.html';">文创设计</a></li>
+				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page19.html';">线上博物馆</a></li>
+				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page20.html';">项目效果</a></li>
 				<li><a href="#" onclick="setCurrentPlayTime(); window.location.href='page11.html';">返回</a></li>
 			</ul>
 		</header>
-		<p class="" align="center"><video src="../video/3.mp4" controls="controls" width="900" height="600"></video>
+		<p class="" align="center"><video src="../video/ 3.mp4" controls="controls" width="900" height="600"></video>
 		</p>
 	</main>
 	<audio id="audioElementId" src="../video/dayv.ogg" autoplay="autoplay" loop="loop" hidden="true"
